--- a/html-css/module-9/styles/style.css
+++ b/html-css/module-9/styles/style.css
@@ -304,6 +304,10 @@ header {
         background-color: black;
     }
 
+    .nav-row {
+        height: 100%;
+    }
+
     header {
         margin-bottom: 107px;
         padding: 0;
@@ -311,12 +315,8 @@ header {
     }
 
     header > nav {
-        display: flex;
         padding: 0 30px;
         height: 100%;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        align-items: center;
     }
 
     .site-logo {
