--- a/html-css/module-10/styles/style.css
+++ b/html-css/module-10/styles/style.css
@@ -120,6 +120,27 @@ input[type="radio"].visually-hidden {
     line-height: 67px;
 }
 
+@media (max-width: 959px) {
+    .site-navigation__item {
+        display: none;
+    }
+    .site-navigation__item--burger {
+        display: block;
+    }
+}
+
+.mobille-menu {
+    position: relative;
+    background-color: rgba(0, 0, 0, .5);
+    max-width: 280px;
+    margin: 0 auto;
+}
+
+.mobille-menu .site-navigation__item {
+    display: block;
+
+}
+
 .site-logo, 
 .site-navigation__link {
     color: #fff;
@@ -142,6 +163,12 @@ input[type="radio"].visually-hidden {
     display: block;
     width: 100%;
     height: 100%;
+    fill: #fff;
+}
+
+.site-navigation__link--burger {
+    padding: 30px 0;
+    font-size: 36px;
 }
 
 @media (max-width: 767px) {
@@ -149,3 +176,10 @@ input[type="radio"].visually-hidden {
     padding: 10px 0;
 }
 }
+
+@media (min-width: 960px) {
+    .site-navigation__item--burger {
+        display: none;
+    }
+}
+
