--- a/html-css/module-10/styles/style.css
+++ b/html-css/module-10/styles/style.css
@@ -106,6 +106,10 @@ input[type="radio"].visually-hidden {
     background-color: transparent;
 }
 
+.prg {
+    margin: 0;
+}
+
 /*Header_______*/
 .banner-wrap {
     height: 540px;
@@ -187,15 +191,24 @@ input[type="radio"].visually-hidden {
 }
 
 .banner-info__templ {
+    padding-top: 50px;
+    margin-bottom: 25px;
     font-family: 'Kaushan Script';
-    font-size: 24px;
-    line-height: 29px;
+    font-size: 36px;
+    line-height: 43px;
 }
 
 .banner-info__main {
+    margin-bottom: 40px;
     font-weight: bold;
-    font-size: 30px;
-    line-height: 36px;
+    font-size: 48px;
+    line-height: 58px;
+}
+
+.button__banner {
+    border: 3px solid #fff;
+    height: 40px;
+    width: 70%;
 }
 
 @media (max-width: 767px) {
