--- a/html-css/module-10/styles/style.css
+++ b/html-css/module-10/styles/style.css
@@ -95,11 +95,6 @@ input[type="radio"].visually-hidden {
     overflow:hidden;
 }
 
-.container {
-    width: 320px;
-    margin: 0 auto;
-}
-
 .button {
     border: 0;
     padding: 0;
@@ -113,7 +108,7 @@ input[type="radio"].visually-hidden {
 /*Header_______*/
 .banner-wrap {
     height: 540px;
-    margin: 0 auto;
+    margin: 0 auto 40px;
     position: relative;
     text-align: center;
     background-image: linear-gradient( 90deg, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), 
@@ -159,7 +154,7 @@ input[type="radio"].visually-hidden {
 
 .site-logo, 
 .site-navigation__link,
-.menu-burger, 
+.menu-burger--clr, 
 .banner-info__main, 
 .banner-info__templ, 
 .button__banner {
@@ -211,9 +206,192 @@ input[type="radio"].visually-hidden {
     width: 70%;
 }
 
+/*Services section______________*/
+.section {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.section-title {
+    margin-bottom: 40px;
+}
+
+.section-title__templ {
+    font-family: 'Kaushan Script';
+    margin-bottom: 10px;
+}
+
+.section-title__main {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.section-title__main::after {
+    display: block;
+    content: "";
+    margin: 20px auto 0;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+}
+
+.serv-list__icon {
+    width: 32px;
+    height: 32px;
+    fill: #b3e9df;
+}
+
+.serv-list__info {
+    text-align: left;
+}
+
+.serv-list__title {
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.serv-list__prg {
+    font-size: 15px;
+    line-height: 24px;
+}
+
+/*Team section__________*/
+.serv-list__prg, 
+.section-title__char {
+    font-family: "Roboto";
+    color: #999;
+}
+
+.section-title__char {
+    font-size:12px;
+    line-height: 14px;
+}
+
+.worker {
+    background-image: linear-gradient(#95e1d3 470px, #fff 81px);
+}
+
+.worker__img {
+    transition: opacity 200ms linear;
+}
+
+.worker__box:hover .worker__img {
+    opacity: 0.25;
+}
+
+.worker.box {
+    position: relative;
+    transition: transform 200ms linear;
+}
+
+.worker-box:hover {
+    transform: translate(-10px, -10px);
+}
+
+.worker-link {
+    margin-bottom: 29px;
+    background-image: -moz-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
+    background-image: -ms-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
+}
+
+.social-icons {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: space-between;
+    min-width: 226px;
+    height: 55px;
+}
+
+.social-icon__link {
+    width: 55px;
+    height: 55px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #fce38a;
+    transition: opacity, background-color 200ms linear;
+    opacity: 0;
+}
+
+.social-icon .facebook {
+    background-image: url(../img/social-icons/facebook.png);
+}
+
+.social-icon .twitter {
+    background-image: url(../img/social-icons/twitter.png);
+}
+
+.social-icon .pinterest {
+    background-image: url(../img/social-icons/pinterest.png);
+}
+
+.social-icon .instagram {
+    background-image: url(../img/social-icons/instagram.png);
+}
+
+.worker-box:hover .social-icons__link,
+.worker-link:focus + .social-icons__link,
+.social-icons__link:focus  {
+    opacity: 1;
+}
+
+.social-icon a:hover, 
+.social-icon a:focus {
+    background-color: #95e1d3;
+}
+
+.portfolio li figure {
+    margin: 0;
+}
+
+figcaption .name,
+figcaption .profession {
+    margin: 0;
+    text-align: center;
+}
+
+figcaption .name {
+    margin-bottom: 10px;
+}
+
+figcaption .profession a,
+figcaption .name a {
+    transition: color 200ms linear;
+}
+
+figcaption .name a {
+    color: #000;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+}
+
+figcaption .profession a {
+    font-family: "Roboto Light Italic";
+    font-size: 15px;
+    line-height: 24px;
+    color: #999;
+}
+
+figcaption .profession a:hover,
+figcaption .name a:hover,
+figcaption .profession a:focus
+figcaption .name a:focus {
+    color: #95e1d3;
+}
+
 @media (max-width: 767px) {
 .site-navigation__item--cart-pg {
     padding: 10px 0;
+}
+.serv-list__item:not(:last-child) {
+    margin-bottom: 25px;
 }
 }
 
