--- a/html-css/module-10/styles/style.css
+++ b/html-css/module-10/styles/style.css
@@ -10,7 +10,7 @@ html {
 
 /*Fonts_________*/
 /* montserrat-regular - latin */
-  @font-face {
+@font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
@@ -57,7 +57,7 @@ html {
   }
 
 body {
-    font-family: 'Montserrat', 'Times New Roman', sans-serif;
+    font-family: "Montserrat Regular", "Times New Roman", sans-serif;
 }
 
 img {
@@ -80,6 +80,21 @@ img {
     text-decoration: none;
 }
 
+.button {
+    border: 0;
+    padding: 0;
+    background-color: transparent;
+}
+
+.prg {
+    margin: 0;
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+}
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
@@ -95,82 +110,59 @@ input[type="radio"].visually-hidden {
     overflow:hidden;
 }
 
-.button {
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-}
-
-.prg {
-    margin: 0;
-}
-
-/*Header_______*/
+/*Header_________*/
 .banner-wrap {
-    height: 540px;
+    height: 1000px;
     margin: 0 auto 40px;
-    position: relative;
     text-align: center;
     background-image: linear-gradient( 90deg, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), 
-    url(../img/banner/background-image_mobile_320.jpg);
+    url(../img/banner/background-image_desktop.jpg);
     background-repeat: no-repeat;
     background-position: center;
 }
 
+.page-header {
+    padding-bottom: 195px;
+}
+
 .page-nav {
-    position: relative;
+    display: flex;
+    min-height: 100px;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.site-logo {
-    font-family: 'Montserrat';
-    font-weight: bold;
-    font-size: 56px;
-    line-height: 67px;
-}
-
-@media (max-width: 959px) {
-    .site-navigation__item {
-        display: none;
-    }
-    .menu-burger {
-        display: block;
-    }
-}
-
-.mobille-menu {
-    position: absolute;
-    width: 100%;
-    background-color: #000000;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.mobille-menu .site-navigation__item {
-    display: block;
-
-}
-
-.site-logo, 
-.site-navigation__link,
-.menu-burger--clr, 
-.banner-info__main, 
+.site-logo,
+.site-navigation__link, 
 .banner-info__templ, 
+.banner-info__main, 
 .button__banner {
     color: #fff;
 }
 
-.site-navigation__link {
-    font-size: 24px;
-    line-height: 29px;
+.site-logo {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 36px;
+}
+
+.site-navigation {
+    display: flex;
+    min-width: 490px;
+    justify-content: space-between;
+}
+
+.site-navigation__link{
+    position: relative;
+    font-size: 14px;
+    line-height: 17px;
     text-transform: uppercase;
+    transition: color 300ms linear;
 }
 
 .site-navigation__link--small {
-    margin: 0 auto;
-    width: 26px;
-    height: 26px;
+    width: 20px;
+    height: 20px;
 }
 
 .site-navigation__icon {
@@ -178,119 +170,220 @@ input[type="radio"].visually-hidden {
     width: 100%;
     height: 100%;
     fill: #fff;
+    transition: fill 300ms linear;
 }
 
-.menu-burger {
-    padding: 10px 0;
-    font-size: 36px;
+.site-navigation__link--small:hover .site-navigation__icon,
+.site-navigation__link--small:focus .site-navigation__icon {
+    fill: #fce38a;
+}
+
+.site-navigation__link:hover,
+.site-navigation__link:focus {
+    color: #fce38a;
+}
+
+.site-navigation__link--big::after {
+    display: block;
+    position: absolute;
+    content: "";
+    margin: 10px auto 0;
+    width: 100%;
+    height: 3px;
+    background-color: #fce38a;
+    opacity: 0;
+    transition: opacity 300ms linear;
+}
+
+.site-navigation__link:hover::after,
+.site-navigation__link:focus::after {
+    opacity: 1;
+}
+
+.banner-info {
+    width: 820px;
+    margin: 0 auto;
 }
 
 .banner-info__templ {
-    padding-top: 50px;
-    margin-bottom: 25px;
+    margin-bottom: 60px;
     font-family: 'Kaushan Script';
-    font-size: 36px;
-    line-height: 43px;
+    font-size: 72px;
+    line-height: 86px;
 }
 
 .banner-info__main {
-    margin-bottom: 40px;
+    margin-bottom: 110px;
     font-weight: bold;
-    font-size: 48px;
-    line-height: 58px;
+    font-size: 150px;
+    line-height: 150px;
 }
 
 .button__banner {
     border: 3px solid #fff;
     height: 40px;
-    width: 70%;
+    width: 160px;
+    transition: background-color 300ms linear;
 }
 
-/*Services section______________*/
-.section {
+.button__banner:hover, 
+.button__banner:focus {
+    border: 0;
+    color: #fce38a;
+    background-color: rgba(0, 0, 0, 0.301);
+}
+
+/*Services section section__________*/
+section {
     text-align: center;
-    margin-bottom: 50px;
 }
 
-.section-title {
-    margin-bottom: 40px;
+.first-section-p,
+section h2 {
+    margin: 0;
+    font-family: 'Montserrat Bold';
 }
 
-.section-title__templ {
-    font-family: 'Kaushan Script';
-    margin-bottom: 10px;
+.first-section-p {
+    margin-bottom: 20px;
+    font-family: "Kaushan Script Regular";
+    font-size: 24px;
+    line-height: 28px;
 }
 
-.section-title__main {
+section h2 {
     font-weight: bold;
+    font-size: 30px;
+    line-height: 36px;
     text-transform: uppercase;
+    margin-bottom: 65px;
 }
 
-.section-title__main::after {
+section h2::after {
     display: block;
     content: "";
-    margin: 20px auto 0;
+    margin: 40px auto 0;
     width: 60px;
     height: 3px;
     background-color: #f38181;
 }
 
-.serv-list__icon {
-    width: 32px;
-    height: 32px;
-    fill: #b3e9df;
-}
-
-.serv-list__info {
+.services {
+    display: flex;
+    margin-bottom: 100px;
+    flex-wrap: wrap;
+    justify-content: space-around;
     text-align: left;
 }
 
-.serv-list__title {
-    margin-bottom: 10px;
+.services li {
+    flex: 0 0 380px;
+    background-repeat: no-repeat;
+    background-size: 32px;
+}
+
+
+
+.services li:not(:nth-last-child(-n+3)) {
+    margin-bottom: 100px;
+}
+
+.services .clock {
+    background-image: url(../img/icons/clock.png);
+}
+
+.services .line {
+    background-image: url(../img/icons/line.png);
+}
+
+.services .computer {
+    background-image: url(../img/icons/computer.png);
+}
+
+.services .book {
+    background-image: url(../img/icons/book.png);
+}
+
+.services .home {
+    background-image: url(../img/icons/home.png);
+}
+
+.services .digital {
+    background-image: url(../img/icons/digital.png);
+}
+
+.services li h3,
+.services li p {
+    margin: 0;
+    padding-left: 85px;
+}
+
+.services li h3 {
+    padding-bottom: 16px;
     text-transform: uppercase;
     font-size: 14px;
     line-height: 17px;
 }
 
-.serv-list__prg {
+.services p, 
+.info {
+    font-family: "Roboto Regular";
     font-size: 15px;
     line-height: 24px;
-}
-
-/*Team section__________*/
-.serv-list__prg, 
-.section-title__char {
-    font-family: "Roboto";
     color: #999;
 }
 
-.section-title__char {
-    font-size:12px;
-    line-height: 14px;
+/*Team section______*/
+section:last-child {
+    padding-bottom: 82px;
+    box-shadow: 0 1px 0 0 #e7e7e7;
 }
 
-.worker {
+section:last-child h2 {
+    margin-bottom: 45px;
+}
+
+.info {
+    margin: 0 auto 90px;
+    width: 960px;
+    text-align: center;
+}
+
+.portfolio {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.portfolio .cart {
+    flex: 0 0 380px;
     background-image: linear-gradient(#95e1d3 470px, #fff 81px);
+
 }
 
-.worker__img {
+.portfolio .img-link img {
     transition: opacity 200ms linear;
 }
 
-.worker__box:hover .worker__img {
+.portfolio .image-box:hover .img-link img {
     opacity: 0.25;
 }
 
-.worker.box {
+.image-box {
     position: relative;
     transition: transform 200ms linear;
 }
 
-.worker-box:hover {
+.image-box:hover {
     transform: translate(-10px, -10px);
 }
 
-.worker-link {
+.portfolio .cart a {
+    display: block;
+    text-decoration: none;
+}
+
+.portfolio .cart .img-link {
     margin-bottom: 29px;
     background-image: -moz-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
     background-image: -webkit-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
@@ -309,7 +402,7 @@ input[type="radio"].visually-hidden {
     height: 55px;
 }
 
-.social-icon__link {
+.social-icon a {
     width: 55px;
     height: 55px;
     background-position: center;
@@ -335,9 +428,9 @@ input[type="radio"].visually-hidden {
     background-image: url(../img/social-icons/instagram.png);
 }
 
-.worker-box:hover .social-icons__link,
-.worker-link:focus + .social-icons__link,
-.social-icons__link:focus  {
+.image-box:hover .social-icons a,
+.img-link:focus + .social-icons a,
+.social-icon a:focus  {
     opacity: 1;
 }
 
@@ -386,18 +479,55 @@ figcaption .name a:focus {
     color: #95e1d3;
 }
 
-@media (max-width: 767px) {
-.site-navigation__item--cart-pg {
-    padding: 10px 0;
-}
-.serv-list__item:not(:last-child) {
-    margin-bottom: 25px;
-}
-}
-
-@media (min-width: 960px) {
-    .menu-burger {
-        display: none;
-    }
+/*Footer__________*/
+footer {
+    display: flex;
+    height: 63px;
+    align-items: center;
+    justify-content: space-between;
 }
 
+footer .copyright {
+    font-size: 14px;
+    line-height: 17px;
+}
+
+footer address {
+    display: inline;
+    font-style: normal;
+    color: #f38181;
+}
+
+footer form {
+    display: inline-flex;
+}
+
+footer input[type="email"],
+footer button[type="submit"] {
+    padding: 0;
+    border: 0;
+}
+
+footer input[type="email"] {
+    width: 230px;
+    height: 40px;
+    box-shadow: 0 0 0 1px #e7e7e7;
+}
+
+footer input[type="email"]::placeholder {
+    font-family: "Roboto Light Italic";
+    font-size: 15px;
+    line-height: 24px;
+    color: #ccc;
+}
+
+footer button[type="submit"] {
+    width: 150px;
+    height: 40px;
+    background-color: #95e1d3;
+    box-shadow: 0 0 0 1px #95e1d3;
+    font-family: 'Montserrat Bold';
+    color: #fff;
+    cursor: pointer;
+    text-transform: uppercase;
+}
