Fixed BEM class name

--- a/html-css/module-10/styles/style.css
+++ b/html-css/module-10/styles/style.css
@@ -113,7 +113,7 @@ input[type="radio"].visually-hidden {
 /*Header_________*/
 .banner-wrap {
     height: 1000px;
-    margin: 0 auto 40px;
+    margin: 0 auto 54px;
     text-align: center;
     background-image: linear-gradient( 90deg, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), 
     url(../img/banner/background-image_desktop.jpg);
@@ -233,33 +233,34 @@ input[type="radio"].visually-hidden {
     background-color: rgba(0, 0, 0, 0.301);
 }
 
-/*Services section section__________*/
-section {
+/*Services section__________*/
+.section {
     text-align: center;
 }
 
-.first-section-p,
-section h2 {
-    margin: 0;
-    font-family: 'Montserrat Bold';
+.section--serv {
+    margin-bottom: 100px;
 }
 
-.first-section-p {
+.section-title {
+    margin-bottom: 65px;
+}
+
+.section-title__templ {
     margin-bottom: 20px;
     font-family: "Kaushan Script Regular";
     font-size: 24px;
     line-height: 28px;
 }
 
-section h2 {
+.section-title__main {
     font-weight: bold;
     font-size: 30px;
     line-height: 36px;
     text-transform: uppercase;
-    margin-bottom: 65px;
 }
 
-section h2::after {
+.section-title__main::after {
     display: block;
     content: "";
     margin: 40px auto 0;
@@ -268,85 +269,68 @@ section h2::after {
     background-color: #f38181;
 }
 
-.services {
+.serv-list {
     display: flex;
-    margin-bottom: 100px;
     flex-wrap: wrap;
-    justify-content: space-around;
+}
+
+.serv-list__item {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+    display: flex;
+}
+
+.serv-list__icon {
+    flex: 0 0 25%;
+    max-width: 25%;
+    width: 32px;
+    height: 32px;
+    fill: #b3e9df;
+}
+
+.serv-list__info {
+    flex: 0 0 75%;
+    max-width: 75%;
     text-align: left;
 }
 
-.services li {
-    flex: 0 0 380px;
-    background-repeat: no-repeat;
-    background-size: 32px;
-}
-
-
-
-.services li:not(:nth-last-child(-n+3)) {
-    margin-bottom: 100px;
-}
-
-.services .clock {
-    background-image: url(../img/icons/clock.png);
-}
-
-.services .line {
-    background-image: url(../img/icons/line.png);
-}
-
-.services .computer {
-    background-image: url(../img/icons/computer.png);
-}
-
-.services .book {
-    background-image: url(../img/icons/book.png);
-}
-
-.services .home {
-    background-image: url(../img/icons/home.png);
-}
-
-.services .digital {
-    background-image: url(../img/icons/digital.png);
-}
-
-.services li h3,
-.services li p {
-    margin: 0;
-    padding-left: 85px;
-}
-
-.services li h3 {
-    padding-bottom: 16px;
+.serv-list__title {
+    margin-bottom: 10px;
     text-transform: uppercase;
     font-size: 14px;
     line-height: 17px;
 }
 
-.services p, 
-.info {
-    font-family: "Roboto Regular";
+.serv-list__prg {
     font-size: 15px;
     line-height: 24px;
+}
+
+.serv-list__prg, 
+.section-title__char {
+    font-family: "Roboto";
     color: #999;
 }
 
+.serv-list__item:not(:nth-last-child(-n+3)) {
+    margin-bottom: 100px;
+}
+
+.section-title__char {
+    width: 980px;
+    margin: 0 auto;
+    font-size:12px;
+    line-height: 14px;
+}
+
 /*Team section______*/
-section:last-child {
+.section--team {
     padding-bottom: 82px;
     box-shadow: 0 1px 0 0 #e7e7e7;
 }
 
-section:last-child h2 {
+.section--team .section-title__main {
     margin-bottom: 45px;
-}
-
-.info {
-    margin: 0 auto 90px;
-    width: 960px;
-    text-align: center;
 }
 
 .portfolio {
@@ -355,35 +339,30 @@ section:last-child h2 {
     justify-content: space-around;
 }
 
-.portfolio .cart {
+.worker {
     flex: 0 0 380px;
     background-image: linear-gradient(#95e1d3 470px, #fff 81px);
 
 }
 
-.portfolio .img-link img {
+.worker__img {
     transition: opacity 200ms linear;
 }
 
-.portfolio .image-box:hover .img-link img {
+.worker__box:hover .worker__img {
     opacity: 0.25;
 }
 
-.image-box {
+.worker__box {
     position: relative;
     transition: transform 200ms linear;
 }
 
-.image-box:hover {
+.worker__box:hover {
     transform: translate(-10px, -10px);
 }
 
-.portfolio .cart a {
-    display: block;
-    text-decoration: none;
-}
-
-.portfolio .cart .img-link {
+.worker__link {
     margin-bottom: 29px;
     background-image: -moz-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
     background-image: -webkit-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
@@ -402,9 +381,10 @@ section:last-child h2 {
     height: 55px;
 }
 
-.social-icon a {
+.social-icons__link {
     width: 55px;
     height: 55px;
+    padding-top: 15px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: #fce38a;
@@ -412,116 +392,117 @@ section:last-child h2 {
     opacity: 0;
 }
 
-.social-icon .facebook {
-    background-image: url(../img/social-icons/facebook.png);
-}
-
-.social-icon .twitter {
-    background-image: url(../img/social-icons/twitter.png);
-}
-
-.social-icon .pinterest {
-    background-image: url(../img/social-icons/pinterest.png);
-}
-
-.social-icon .instagram {
-    background-image: url(../img/social-icons/instagram.png);
-}
-
-.image-box:hover .social-icons a,
-.img-link:focus + .social-icons a,
-.social-icon a:focus  {
+.worker__box:hover .social-icons__link,
+.worker__link:focus + .social-icons__link,
+.social-icons__link:focus  {
     opacity: 1;
 }
 
-.social-icon a:hover, 
-.social-icon a:focus {
-    background-color: #95e1d3;
+.social-icons__link:hover, 
+.social-icons__link:focus {
+    background-color: #f38181;
 }
 
-.portfolio li figure {
+.social-icons__icon {
+    display: block;
+    margin: 0 auto;
+    width: 26px;
+    height: 26px;
+    fill: #f38181;
+}
+
+.social-icons__link:hover .social-icons__icon, 
+.social-icons__link:focus .social-icons__icon {
+    fill: #fff;
+}
+
+.worker__fgr {
     margin: 0;
 }
 
-figcaption .name,
-figcaption .profession {
-    margin: 0;
-    text-align: center;
-}
-
-figcaption .name {
+.worker__name {
     margin-bottom: 10px;
 }
 
-figcaption .profession a,
-figcaption .name a {
+.worker__link--name,
+.worker__link--profession {
     transition: color 200ms linear;
 }
 
-figcaption .name a {
+.worker__link--name {
     color: #000;
     font-size: 14px;
     line-height: 17px;
     text-transform: uppercase;
 }
 
-figcaption .profession a {
-    font-family: "Roboto Light Italic";
+.worker__link--profession {
+    font-family: "Roboto";
+    font-weight: 100;
+    font-style: italic;
     font-size: 15px;
     line-height: 24px;
     color: #999;
 }
 
-figcaption .profession a:hover,
-figcaption .name a:hover,
-figcaption .profession a:focus
-figcaption .name a:focus {
+.worker__link--profession:hover,
+.worker__link--name:hover,
+.worker__link--profession:focus
+.worker__link--name:focus {
     color: #95e1d3;
 }
 
+.worker:not(:nth-last-child(-n+3)) {
+    margin-bottom: 100px;
+}
+
 /*Footer__________*/
-footer {
+.footer {
     display: flex;
     height: 63px;
     align-items: center;
     justify-content: space-between;
 }
 
-footer .copyright {
+.copyright {
     font-size: 14px;
     line-height: 17px;
 }
 
-footer address {
+.copyrigh__link {
+    text-decoration: none;
+}
+
+.copyright__adrs {
     display: inline;
     font-style: normal;
     color: #f38181;
 }
 
-footer form {
+.footer-form {
     display: inline-flex;
 }
 
-footer input[type="email"],
-footer button[type="submit"] {
+.footer-form__email,
+.footer-form__btn {
     padding: 0;
     border: 0;
 }
 
-footer input[type="email"] {
+.footer-form__email {
     width: 230px;
     height: 40px;
     box-shadow: 0 0 0 1px #e7e7e7;
 }
 
-footer input[type="email"]::placeholder {
+.footer-form__email::placeholder {
     font-family: "Roboto Light Italic";
     font-size: 15px;
     line-height: 24px;
     color: #ccc;
 }
 
-footer button[type="submit"] {
+.footer-form__btn {
     width: 150px;
     height: 40px;
     background-color: #95e1d3;
@@ -530,4 +511,12 @@ footer button[type="submit"] {
     color: #fff;
     cursor: pointer;
     text-transform: uppercase;
+    transition: background-color 300ms linear;
+}
+
+.footer-form__btn:hover, 
+.footer-form__btn:focus {
+    color: #fce38a;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .5);
 }
