--- a/html-css/module-10/styles/style.css
+++ b/html-css/module-10/styles/style.css
@@ -153,6 +153,12 @@ input[type="radio"].visually-hidden {
     color: #fff;
 }
 
+.menu-burger {
+    display: none;
+    padding: 10px 0;
+    font-size: 36px;
+}
+
 .site-logo {
     font-weight: bold;
     font-size: 30px;
@@ -355,7 +361,7 @@ input[type="radio"].visually-hidden {
 .section-title__char {
     width: 980px;
     margin: 0 auto;
-    font-size:12px;
+    font-size: 12px;
     line-height: 14px;
 }
 
@@ -633,5 +639,260 @@ input[type="radio"].visually-hidden {
     url(../img/banner/background-image_desktop@2x.jpg);
     background-image: linear-gradient( 90deg, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), 
     url(../img/banner/background-image_desktop@2x.jpg);
+    }
+}
+
+@media (max-width: 959px) {
+    .site-navigation__item {
+        display: none;
+    }
+    .menu-burger {
+        display: block;
+    }
+    .mobille-menu {
+        position: absolute;
+        width: 100%;
+        background-color: #000000;
+        z-index: 1;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    
+    .menu-burger--clr {
+        color: #fff;
+    }
+
+    .mobille-menu .site-navigation__item {
+        display: block;
+    }
+
+    .banner-info {
+        max-width: 70%;
+    }
+}
+
+@media (max-width: 767px) {
+    .container {
+        max-width: 540px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    .banner-wrap {
+    margin-bottom: 35px;
+    height: 540px;
+    background-image: -webkit-gradient( linear, left top, right top, from(rgba(252, 227, 138, .9)), to(rgba(243, 129, 129, .9))), 
+    url(../img/banner/background-image_mobile_768-min.jpg);
+    background-image: -o-linear-gradient( left, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), 
+    url(../img/banner/background-image_mobile_768-min.jpg);
+    background-image: linear-gradient( 90deg, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), 
+    url(../img/banner/background-image_mobile_768-min.jpg);
+    }
+
+    .page-header {
+        padding-bottom: 50px;
+    }
+
+    .page-nav {
+        flex-flow: column wrap;
+        justify-content: center;
+    }
+
+    .site-logo {
+        font-size: 50px;
+        line-height: 60px;
+    }
+
+    .site-navigation {
+       min-width: auto;
+       flex-flow: column wrap;
+    }
+    .site-navigation__link {
+        font-size: 24px;
+        line-height: 29px;
+    }
+
+    .site-navigation__link--small {
+        width: 30px;
+        height: 30px;
+        margin: 0 auto;
+    }
+
+    .banner-info__templ {
+        margin-bottom: 25px;
+        font-size: 48px;
+        line-height: 58px;
+    }
+
+    .banner-info__main {
+        margin-bottom: 40px;
+        font-size: 52px;
+        line-height: 61px;
+    }
+
+    .button__banner {
+        width: 90%;
+    }
+
+    /*Services section__________*/
+    .section--serv {
+        margin-bottom: 50px;
+    }
+
+    .section-title {
+        margin-bottom: 25px;
+    }
+
+    .section-title__templ {
+        margin-bottom: 10px;
+        font-size: 36px;
+        line-height: 43px;
+    }
+    
+    .section-title__main {
+        font-size: 48px;
+        line-height: 58px;
+    }
+
+    .section-title__main::after {
+        margin-top: 20px;
+        width: 100px;
+        height: 4px;
+    }
+
+    .serv-list {
+        flex-flow: column wrap;
+        align-items: center;
+    }
+
+    .serv-list__item {
+        flex: 0 0 100%;
+        max-width: 100%;
+        flex-flow: column wrap;
+        align-items: center;
+    }
+
+    .serv-list__icon {
+        width: 50px;
+        height: 50px;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .serv-list__info {
+        flex: 0 0 100%;
+        max-width: 100%;
+        text-align: center;
+    }
+
+    .serv-list__title {
+        font-size: 20px;
+        line-height: 24px;
+    }
+    .serv-list__prg {
+        font-size: 19px;
+        line-height: 33px;
+    }
+
+    .serv-list__item:not(:last-child) {
+        margin-bottom: 40px;
+    }
+
+    .section-title__char {
+        width: 85%;
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .section--team {
+        padding-bottom: 40px;
+    }
+
+    .section--team .section-title__main {
+        margin-bottom: 25px;
+    }
+
+    .portfolio {
+        flex-flow: column wrap;
+    }
+
+    .worker {
+        margin-left: -15px;
+        margin-right: -15px;
+        flex: 0 0 320px;
+        background-image: -o-linear-gradient(#95e1d3 395.781px, #fff 81px);
+    background-image: linear-gradient(#95e1d3 395.781px, #fff 81px);
+    }
+
+    .worker__box:hover {
+        transform: none;
+    }
+
+    .social-icons {
+        top: 93%;
+    }
+
+    .social-icons__link {
+        opacity: 1;
+    }
+
+    .worker__link--name {
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    .worker__link--profession {
+        font-size: 18px;
+        line-height: 32px;
+    }
+
+    .worker:not(:last-child) {
+        margin-bottom: 50px;
+    }
+
+    /*Footer__________*/
+    .footer {
+        height: auto;
+        margin-bottom: 30px;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .copyright {
+        padding-top: 10px;
+        margin-bottom: 25px;
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    .footer-form__email {
+        width: auto;
+        flex: 0 0 70%;
+    }
+
+    .footer-form__btn {
+        width: auto;
+        flex: 0 0 30%;
+    }
+
+
+}
+
+@media (max-width: 575px) {
+    .container {
+        max-width: 320px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    .banner-wrap {
+    height: 540px;
+    background-image: -webkit-gradient( linear, left top, right top, from(rgba(252, 227, 138, .9)), to(rgba(243, 129, 129, .9))), 
+    url(../img/banner/background-image_mobile_576-min.jpg);
+    background-image: -o-linear-gradient( left, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), 
+    url(../img/banner/background-image_mobile_576-min.jpg);
+    background-image: linear-gradient( 90deg, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), 
+    url(../img/banner/background-image_mobile_576-min.jpg);
     }
 }
